--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">    
-<script type="text/javascript" src="http://use.typekit.com/zyp1zsi.js"></script>
- <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/1.4.0/css/bootstrap.min.css" integrity="sha256-zLPap+v5iCrSpak+McLIn4WFG9LB46x2JbO3WWax1aM=" crossorigin="anonymous" />
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 <style type="text/css">
       .hero-unit h1 {
-          font-family: "lobster-1","lobster-2";   
+          font-family: "Lobster";   
           margin-bottom: 20px;
       }
       
