--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <meta name="description" content="Matt Kane's open source projects">
     <meta name="author" content="Matt Kane">
 
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/1.4.0/css/bootstrap.min.css" integrity="sha256-zLPap+v5iCrSpak+McLIn4WFG9LB46x2JbO3WWax1aM=" crossorigin="anonymous" />
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/1.4.0/css/bootstrap.min.css" integrity="sha256-zLPap+v5iCrSpak+McLIn4WFG9LB46x2JbO3WWax1aM=" crossorigin="anonymous" />
+<link href="//fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 <style type="text/css">
       .hero-unit h1 {
           font-family: "Lobster";   
