--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
                 A Levels based on personal statement and interview. Gained a 2:1. Mostly was a break from tech, but I did
                 build a web-based game to model iterated prisoner's dilemmas as part of my studies in game theory, which
                 was later added to the course syllabus.
+            </p>
+        </section>
 
     </div>
 </body>
