Add Lambda etc to main list

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <span>Apache</span>
             <span>NGINX</span>
             <span>AWS</span>
+            <span>AWS Lambda</span>
+            <span>AWS API Gateway</span>
+            <span>DynamoDB</span>
             <span>Alexa</span>
             <span>Git</span>
             <span>Node</span>
@@ -62,7 +65,6 @@
             <span>Arduino</span>
             <span>Agile</span>
             <span>Kanban</span>
-            <span>Node</span>
             <span>Photoshop</span>
             <span>Illustrator</span>
         </section>
