--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <span>Node</span>
             <span>Angular</span>
             <span>Ionic</span>
+            <span>RxJS</span>
             <span>iOS</span>
             <span>Objective-C</span>
             <span>Cordova/Phonegap</span>
@@ -129,7 +130,7 @@
                 postcode or authority. An SPA frontend provides an interface for end users to search. All parts of the app
                 are written in Typescript. The plan is eventually to create an Alexa skill and chat bots based on the API.</p>
             <h3><a href='http://onmyway.chat'>On My Way</a><span>Alexa skill</span><span>Apr 2017</span></h3>
-            <div class='tech'><span>Alexa technologies Kit</span><span>Node.js</span><span>Typescript</span><span>AWS Lambda</span><span>DynamoDB</span><span>AWS API Gateway</span><span>GD</span>
+            <div class='tech'><span>Alexa Skills Kit</span><span>Node.js</span><span>Typescript</span><span>AWS Lambda</span><span>DynamoDB</span><span>AWS API Gateway</span><span>GD</span>
             </div>
             <p>An Alexa skill to find live train times and plan journeys. I found the official National Rail skill to be awkward
                 and unintuitive to use, so I built a new one. The skill consumes multiple APIs to check live train times
@@ -141,7 +142,7 @@
                 API Gateway. All code was written in TypeScript and transpiled to Javascript to run on Node.</p>
 
             <h3><a href='https://itunes.com/app/beetight'>Beetight mobile</a><span>iOS and Android apps</span><span>Feb 2017</span></h3>
-            <div class='tech'><span>Ionic 2</span><span>Angular 2</span><span>Cordova</span><span>iOS</span><span>Android</span></div>
+            <div class='tech'><span>Ionic 2</span><span>Angular 2</span><span>TypeScript</span><span>RxJS</span><span>Cordova</span><span>iOS</span><span>Android</span></div>
             <p>The new mobile app for Beetight was a complete rewrite, as the old app was seven years old with a lot of technical
                 debt. I implemented it as an Ionic 2/Angular app on top of Cordova/Phonegap. It uses several native plugins
                 that I developed.</p>
