Rearrange tech, add images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <img src='img/matt.jpg' alt='Matt' id='matt'>
     <div id='cv'>
         <h1>Matt Kane</h1>
         <div id='contact'>
@@ -35,16 +36,18 @@
 
         <section id='technologies' class='tech'>
             <h2>Technologies<a href='#technologies'>#</a></h2>
-            <span>Javascript / ECMAScript 2017 / ES.Next</span>
-            <span>Typescript</span>
+            <span class='highlight'>Javascript / ES6 / ES.Next</span>
+            <span class='highlight'>Typescript</span>
+            <span class='highlight'>Angular 2</span>
+            <span class='highlight'>Node.js</span>
+            <span class='highlight'>Ionic</span>
+            <span>Consumer electronics</span>
             <span>HTML</span>
             <span>CSS</span>
             <span>Sass</span>
-            <span>Node</span>
-            <span>Angular</span>
-            <span>Ionic</span>
             <span>RxJS</span>
             <span>iOS</span>
+            <span>Android</span>
             <span>Objective-C</span>
             <span>Cordova/Phonegap</span>
             <span>PHP</span>
@@ -59,15 +62,12 @@
             <span>DynamoDB</span>
             <span>Alexa</span>
             <span>Git</span>
-            <span>Node</span>
             <span>C</span>
             <span>AVR</span>
             <span>Embedded development</span>
             <span>Arduino</span>
             <span>Agile</span>
             <span>Kanban</span>
-            <span>Photoshop</span>
-            <span>Illustrator</span>
         </section>
         <section id='experience'>
             <h2>Experience<a href='#experience'>#</a></h2>
